[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "python-levenshtein>=0.27.1",
    "streamlit>=1.46.0",
    "xlsxwriter>=3.2.5",
]
